--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.practica3ej1.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_contact"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/contact"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_order"
+        android:icon="@drawable/ic_shopping_cart"
+        android:orderInCategory="10"
+        android:title="@string/order"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_status"
+        android:icon="@drawable/ic_status_info"
+        android:orderInCategory="20"
+        android:title="@string/status"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_favorites"
+        android:icon="@drawable/ic_favorite"
+        android:orderInCategory="30"
+        android:title="@string/favorites"
+        app:showAsAction="ifRoom" />
 </menu>
